manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-logger
  namespace: k8s-helm
spec:
  selector:
    matchLabels:
      app: node-logger
  template:
    metadata:
      labels:
        app: node-logger
    spec:
      containers:
      - name: logger
        image: busybox
        command: ["sh", "-c", "while true; do echo \"[$(date)] Node: $NODE_NAME alive\"; sleep 10; done"]
