manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: k8s-helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      serviceAccountName: flask-app-sa
      containers:
      - name: flask-app
        image: k8s-helm:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8080

        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secrets
          readOnly: true

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5

      volumes:
      - name: secret-volume
        secret:
          secretName: flask-secret
